Fixed a few Visual problems🔧
1. N/A
2. 10
3. Fixed a few visual glitches

--- a/Client/Website/src/app/components/activities/activity-details/activity-details.component.scss
+++ b/Client/Website/src/app/components/activities/activity-details/activity-details.component.scss
@@ -14,8 +14,8 @@
 
 .details-pic {
 
-    height: 75vh;
-    width: 57vw;
+    // height: 75vh;
+    width: 40vw;
     margin: 20px 20px 0px 80px;
     position: relative;
 }
