--- a/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.html
+++ b/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.html
@@ -4,7 +4,7 @@
 </p>
 <mat-divider class="divider"></mat-divider>
 
-<app-filter [data]="data" [data_injection]="data_injection"
+<app-filter [other_data]="extra_data" [data]="data" [data_injection]="data_injection"
 [filtered_data]="filtered_data"></app-filter>
 
 
@@ -12,5 +12,5 @@
 [data_injection]="data_injection" [extra_data]="extra_data" [filtered_data]="filtered_data"
 (hover)="hover.emit($event)" (modify_click)="displayModify($event)"></app-table>
 
-<button *ngIf="change_injection" class="add-btn" (click)="displayAdd()">{{'add' | translate}}
+<button *ngIf="change_injection && !loading" class="add-btn" (click)="displayAdd()">{{'add' | translate}}
   {{data_injection.title}}</button>
