--- a/Client/Website/src/app/pages/chat/guest/chat.component.scss
+++ b/Client/Website/src/app/pages/chat/guest/chat.component.scss
@@ -6,7 +6,7 @@
 
 .main {
 
-    background-image: url('../../../assets/support-background.jpg');
+    background-image: url('../../../../assets/support-background-2.jpg');
     background-size: cover;
     height: 100%;
     width: 100%;
