Prepared Restaurant Page📱
1. Design, Implement Rooms Page
2. 10
3. Prepared the necessary files for restaurant page.

--- a/Client/Application/src/app/components/room/room-modal/room-modal.component.scss
+++ b/Client/Application/src/app/components/room/room-modal/room-modal.component.scss
@@ -26,7 +26,7 @@
     font-size: 2vw;
     line-height: 3.5vh;
     letter-spacing: 0.02em;
-    color: white;
+    color: #14274A;
 
 }
 
@@ -50,7 +50,7 @@
     font-style: normal;
     font-size: 1.2vw;
     line-height: 3vh;
-    color: white;
+    color: #14274A;
     margin: 0px
 }
 
