--- a/Client/Website/src/app/components/room/booking-details/booking-details.component.html
+++ b/Client/Website/src/app/components/room/booking-details/booking-details.component.html
@@ -11,7 +11,7 @@
         <tr>
             <td>
 
-                <img class="details-pic" [src]="path">
+                <img class="details-pic" [src]="room?.images?.at(0)" onerror="this.src='assets/placeholder.png'">
             </td> 
         </tr>
     </table>
