--- a/Client/Website/src/app/components/food/food-list-item/food-list-item.component.html
+++ b/Client/Website/src/app/components/food/food-list-item/food-list-item.component.html
@@ -3,7 +3,7 @@
         <td style="padding: 16px; width: 20%;" rowspan="2">
 
             <img style="vertical-align: middle; object-fit: cover;" width="256vh" height="256vh"
-                [src]="image">
+                [src]="food.value.image" onerror="this.src='assets/placeholder.png'">
 
         </td>
         <td>
