--- a/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.html
+++ b/Client/Website/src/app/components/food/food-list-popup/food-list-popup.component.html
@@ -8,7 +8,7 @@
             <td style="padding: 16px; width: 40%">
 
                 <img style="vertical-align: middle; object-fit: cover; padding: 0;" width="480vh" height="360vh"
-                    [src]="image">
+                    [src]="image" onerror="this.src='assets/placeholder.png'">
 
             </td>
             <td style="padding: 16px; width: 100%;">
