--- a/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.scss
+++ b/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.scss
@@ -1,130 +1,275 @@
-.restaurant-header {
-    background: url('../../../../../assets/restaurant-paris.png');
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-    background-color: #14274A88;
-    background-blend-mode: soft-light;
-}
+// .restaurant-header {
+//     background: url('../../../../../assets/restaurant-paris.png');
+//     background-size: cover;
+//     background-position: center;
+//     height: 100vh;
+//     background-color: #14274A88;
+//     background-blend-mode: soft-light;
+// }
 
-.restaurant-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+// .restaurant-container {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     position: relative;
+// }
+
+
+// .restaurant-parag {
+//     width: 50%;
+//     align-self: center;
+//     color: #14274A;
+//     font-weight: 500;
+//     text-align: center;
+//     padding-bottom: 10px;
+// }
+
+// .restaurant-title {
+//     color: #14274A;
+//     font-weight: 142px;
+//     font-size: 40px;
+//     letter-spacing: 0.05em;
+//     padding-top: 10px;
+//     text-align: center;
+//     text-transform: uppercase;
+// }
+
+
+
+// .title {
+//     text-transform: uppercase;
+//     color: white;
+//     margin: 0;
+// }
+
+// .title-1 {
+//     @extend .title;
+//     font-family: 'Kulim Park';
+//     font-size: 32px;
+// }
+
+// .title-2 {
+//     @extend .title;
+//     font-family: 'Kulim Park';
+//     font-size: 78px;
+// }
+
+// .title-3 {
+//     @extend .title;
+//     font-family: 'Kulim Park';
+//     font-size: 64px;
+// }
+
+// .title-4 {
+//     @extend .title;
+//     font-family: 'Kulim Park';
+//     font-size: 16px;
+//     font-weight: 550;
+
+// }
+
+// .title-container {
+//     margin-left: 128px;
+//     margin-top: 32px;
+
+// }
+
+// .menu-button {
+//     background-color: #14274A;
+//     color: white;
+//     margin: 10px;
+//     padding: 20px;
+//     width: 250px;
+//     border-color: transparent;
+//     margin: 20px;
+//     font-size: 20px;
+//     text-transform: uppercase;
+// }
+
+// .menu-button:hover {
+
+//     color: #14274A;
+//     background-color: lightgray;
+
+// }
+
+// .feedback-button {
+//     background-color: white;
+//     color: #14274A;
+//     border-color: white;
+//     padding: 10px;
+//     width: 150px;
+//     margin: 20px;
+//     font-size: 14px;
+//     text-transform: uppercase;
+// }
+
+// .feedback-button:hover {
+
+//     background-color: #14274A33;
+//     color: white;
+
+// }
+
+// .chefs-button {
+//     position: absolute;
+//     bottom: 5%;
+//     background-color: white;
+//     color: #14274A;
+//     border: transparent;
+//     padding: 20px;
+//     width: 250px;
+//     font-size: 20px;
+//     text-transform: uppercase;
+// }
+
+// .chefs-button:hover {
+    
+//     background-color: #999999;
+
+// }
+.main {
+
+
+    background-image: url('../../../../../assets/rooms/restaurant-main.jpg');
+    background-size: cover;
+    background-color: #14274A55;
+    background-blend-mode: soft-light;
+    height: 70%;
     position: relative;
 }
 
-
-.restaurant-parag {
-    width: 50%;
-    align-self: center;
-    color: #14274A;
-    font-weight: 500;
-    text-align: center;
-    padding-bottom: 10px;
-}
-
-.restaurant-title {
-    color: #14274A;
-    font-weight: 142px;
-    font-size: 40px;
-    letter-spacing: 0.05em;
-    padding-top: 10px;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-
-
 .title {
+
+    font-family: 'Asap';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 39px;
     text-transform: uppercase;
     color: white;
-    margin: 0;
-}
-
-.title-1 {
-    @extend .title;
-    font-family: 'Kulim Park';
-    font-size: 32px;
-}
-
-.title-2 {
-    @extend .title;
-    font-family: 'Kulim Park';
-    font-size: 78px;
-}
-
-.title-3 {
-    @extend .title;
-    font-family: 'Kulim Park';
-    font-size: 64px;
-}
-
-.title-4 {
-    @extend .title;
-    font-family: 'Kulim Park';
-    font-size: 16px;
-    font-weight: 550;
-
-}
-
-.title-container {
-    margin-left: 128px;
-    margin-top: 32px;
-
-}
-
-.menu-button {
-    background-color: #14274A;
-    color: white;
-    margin: 10px;
-    padding: 20px;
-    width: 250px;
-    border-color: transparent;
-    margin: 20px;
-    font-size: 20px;
-    text-transform: uppercase;
-}
-
-.menu-button:hover {
-
-    color: #14274A;
-    background-color: lightgray;
-
-}
-
-.feedback-button {
-    background-color: white;
-    color: #14274A;
-    border-color: white;
-    padding: 10px;
-    width: 150px;
-    margin: 20px;
-    font-size: 14px;
-    text-transform: uppercase;
-}
-
-.feedback-button:hover {
-
-    background-color: #14274A33;
-    color: white;
-
-}
-
-.chefs-button {
+    width: fit-content;
     position: absolute;
-    bottom: 5%;
-    background-color: white;
-    color: #14274A;
-    border: transparent;
-    padding: 20px;
-    width: 250px;
-    font-size: 20px;
-    text-transform: uppercase;
+    left: 50%;
+    top: 45%;
+    transform: translateX(-50%) translateY(-50%);
 }
 
-.chefs-button:hover {
+.restaurant-header{
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'Roboto';
+    font-weight: 500;
+    color: black;
     
-    background-color: #999999;
+}
 
+hr {
+    background-color: #930000;
+    width: 80%;
+    margin-bottom: 4%;
+}
+
+// .content {
+
+//     font-family: 'Montserrat';
+//     font-style: normal;
+//     font-size: 12px;
+//     line-height: 3vh;
+//     color: #000000;
+//     margin: 0px;
+//     text-align: center;
+// }
+
+.content-1 {
+
+    @extend .content;
+    font-weight: 700;
+
+}
+
+// .content-2 {
+
+//     @extend .content;
+//     font-weight: 400;
+//     max-width: 40vh;
+//     text-align: center;
+
+// }
+
+.content {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-size: 12px;
+    line-height: 3vh;
+    color: #000000;
+    margin: 0px;
+    text-align: center;
+  }
+  
+  .container {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .content-2 {
+    @extend .content;
+    font-weight: 400;
+    max-width: 40vh;
+    text-align: center;
+  }
+
+
+img:hover {
+    filter: brightness(0.7);
+  }
+
+.image-bg {
+    background-color: #930000;
+    block-size: fit-content;
+    height: 55%;
+    margin-top: 12%;
+    position: relative;
+  }
+  
+
+  
+  img {
+    box-sizing: border-box;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80%;
+    height: 100%;
+    transform: translateY(-10%);
+    position: relative;
+    filter: brightness(0.7);
+  }
+  
+  .image-container {
+    position: relative;
+    max-width: 100%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+
+  .overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-family: 'Abhaya Libre';
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 18px;
+  }
+.header-2{
+    @extend .restaurant-header;
+    font-size: 20px;
 }
