Added View Menu and Feedback📱
1. Design, Implement Rooms Page
2. 10
3. Added view menu and feedback.

--- a/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
+++ b/Client/Application/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
@@ -50,11 +50,31 @@
 
         </p>
     </div>
+
     <br>
+
     <p class="header-2">The Chefs</p>
     <div class="image-bg">
         <div class="image-container">
-        <img (click)="chef_dialog.openDialog()" src="../../../../../assets/rooms/chefs2.jpg">
-        <div class="overlay-text">Click here to view</div>
+            <img (click)="chef_dialog.openDialog()" src="../../../../../assets/rooms/chefs2.jpg">
+            <div class="overlay-text">Click here to view</div>
         </div>
     </div>
+
+    <h1 class="restaurant-header">Menu</h1>
+    <hr>
+    <div class="container">
+        <p class="content-2">
+            The menu changes seasonally to ensure that the ingredients are at the peak of their flavor, and the chefs
+            are always experimenting with new techniques and recipes to keep things exciting.
+        </p>
+    </div>
+
+    <div class="button-container">
+
+        <button class="view-menu-button">View Menu</button>
+      </div>
+      <div class="button-container">
+
+        <button class="feedback-button">Feedback</button>
+      </div>
