Completed the Chef List Dialog📱
1. Design, Implement Rooms Page
2. 10
3. Completed the chef list dialog.

--- a/Client/Application/src/app/services/dialogs/chef-list/chef-list.component.html
+++ b/Client/Application/src/app/services/dialogs/chef-list/chef-list.component.html
@@ -1,14 +1,18 @@
+<div class="dialog-container">
 <div mat-dialog-title class="title padded">
 
   The Chefs
-  <hr style="border-color: #14274A;">
+
+  <hr>
 
 </div>
-<div class="content padded" mat-dialog-content>
-  Gordon Ramsay<br>
-  Edward Scissorhands<br>
-  Oprah Winfrey<br>
-  Purple Cat<br>
-  Elite Keryakos<br>
-  Machine Gun Kelly
+  
+  <div class="content padded" mat-dialog-content>
+    Gordon Ramsay<br>
+    Edward Scissorhands<br>
+    Oprah Winfrey<br>
+    Purple Cat<br>
+    Elite Keryakos<br>
+    Machine Gun Kelly
+  </div>
 </div>
